experience section mobile / hero circle image fix

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -13,7 +13,7 @@
 }
 
 .circle-image {
-  grid-area: 3 / 3 / 4 / 4;
+  grid-area: 2 / 3 / 4 / 4;
   background-image: url('../../images/pattern-circle.svg');
   background-repeat: no-repeat;
   background-position: calc(100% + 65px) calc(100% + -1px);
